# DiskCleaner

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  disk_cleaner_app.cpp
scripts/: main.py  test_main.py
src/: CMakeLists.txt
src/log/: log.h
src/utils/: file_helper.cpp  file_helper.h
test/: CMakeLists.txt  test_file_helper.cpp
